# sleep-monitoring

./: .gitignore
api/: convert_audio.py  docker-compose.yml  index.py  index2.py  plot_mic.py  requirements.txt  teste.html  teste.py  teste.sql  teste2.py
esp/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults.example
esp/main/: CMakeLists.txt  Kconfig  idf_component.yml  main.c  sensor_manager.c  sensor_manager.h  websocket_client.c  websocket_client.h  wifi_manager.c
